# regex

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: CMakeLists.txt  argparse.h  ast.h  cmdline.h  compile.h  dfa.h  dstate.h  fa.h  nfa.h  parser.h  regex.h.in  stack.h  state.h  table.h  utilities.h
include/automata/: dfa.h  fa.h  nfa.h
include/graph/: graph.h  nfa.h
include/language/: alphabet.h  ast.h  parser.h
include/regex/automata/: dfa.h  fa.h  nfa.h
include/regex/graph/: graph.h
include/regex/language/: alphabet.h  ast.h  parser.h
include/regex/memory/: pool_allocator.h
include/regex/state/: dstate.h  nstate.h
include/regex/utilities/: cmdline.h  compile.h
include/state/: dstate.h  nstate.h  state.h
include/table/: utilities.hpp
include/utilities/: compile.h
src/: CMakeLists.txt  ast.cpp  cmdline.cpp  compile.cpp  dfa.cpp  dstate.cpp  nfa.cpp  parser.cpp  regex.cpp  state.cpp  table.cpp  utilities.cpp
src/automata/: dfa.cpp  nfa.cpp
src/language/: alphabet.cpp  ast.cpp  parser.cpp
src/state/: dstate.cpp  nstate.cpp  state.cpp
src/utilities/: compile.cpp
test/: CMakeLists.txt  bm_dfa.cpp  regex-benchmark.json  test_cmdline.cpp  test_compile.cpp  test_dfa.cpp  test_dstate.cpp  test_graph.cpp  test_nfa.cpp  test_parser.cpp  test_table.cpp
